--- a/index.html
+++ b/index.html
@@ -31,112 +31,9 @@
 			<!-- Меню -->
 			<script src='getmenu.js'></script>
 			<!-- Основной блок -->
-			<div class="col-md-9 col-lg-10 content-container">
-				<h4 style="padding-top: 20px; color: grey;">Recent postcards...</h4>
-				<div class="row">
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/BY-2453945.jpg"><img  src="./last/BY-2453945.jpg" alt="BY-2453945"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/BY-2457448.jpg"><img  src="./last/BY-2457448.jpg" alt="BY-2457448"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/BY-2490626.jpg"><img  src="./last/BY-2490626.jpg" alt="BY-2490626"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/BY-2490939.jpg"><img  src="./last/BY-2490939.jpg" alt="BY-2490939"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/BY-2493610.jpg"><img  src="./last/BY-2493610.jpg" alt="BY-2493610"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CA-895572.jpg"><img  src="./last/CA-895572.jpg" alt="CA-895572"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CA-904233.jpg"><img  src="./last/CA-904233.jpg" alt="CA-904233"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2660924.jpg"><img  src="./last/CN-2660924.jpg" alt="CN-2660924"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2679684.jpg"><img  src="./last/CN-2679684.jpg" alt="CN-2679684"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2683828.jpg"><img  src="./last/CN-2683828.jpg" alt="CN-2683828"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2694735.jpg"><img  src="./last/CN-2694735.jpg" alt="CN-2694735"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2728321.jpg"><img  src="./last/CN-2728321.jpg" alt="CN-2728321"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2735071.jpg"><img  src="./last/CN-2735071.jpg" alt="CN-2735071"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CN-2735846.jpg"><img  src="./last/CN-2735846.jpg" alt="CN-2735846"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CZ-1540157.jpg"><img  src="./last/CZ-1540157.jpg" alt="CZ-1540157"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CZ-1543068.jpg"><img  src="./last/CZ-1543068.jpg" alt="CZ-1543068"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CZ-1553199.jpg"><img  src="./last/CZ-1553199.jpg" alt="CZ-1553199"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/CZ-1564211.jpg"><img  src="./last/CZ-1564211.jpg" alt="CZ-1564211"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-7966640.jpg"><img  src="./last/DE-7966640.jpg" alt="DE-7966640"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-7982467.jpg"><img  src="./last/DE-7982467.jpg" alt="DE-7982467"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8028734.jpg"><img  src="./last/DE-8028734.jpg" alt="DE-8028734"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8066239.jpg"><img  src="./last/DE-8066239.jpg" alt="DE-8066239"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8068226.jpg"><img  src="./last/DE-8068226.jpg" alt="DE-8068226"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8090515.jpg"><img  src="./last/DE-8090515.jpg" alt="DE-8090515"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8108964.jpg"><img  src="./last/DE-8108964.jpg" alt="DE-8108964"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8108972.jpg"><img  src="./last/DE-8108972.jpg" alt="DE-8108972"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8134678.jpg"><img  src="./last/DE-8134678.jpg" alt="DE-8134678"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8141629.jpg"><img  src="./last/DE-8141629.jpg" alt="DE-8141629"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8141631.jpg"><img  src="./last/DE-8141631.jpg" alt="DE-8141631"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8209869.jpg"><img  src="./last/DE-8209869.jpg" alt="DE-8209869"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8210255.jpg"><img  src="./last/DE-8210255.jpg" alt="DE-8210255"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8249153.jpg"><img  src="./last/DE-8249153.jpg" alt="DE-8249153"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8252009.jpg"><img  src="./last/DE-8252009.jpg" alt="DE-8252009"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8259365.jpg"><img  src="./last/DE-8259365.jpg" alt="DE-8259365"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8266094.jpg"><img  src="./last/DE-8266094.jpg" alt="DE-8266094"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8268439.jpg"><img  src="./last/DE-8268439.jpg" alt="DE-8268439"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8276452.jpg"><img  src="./last/DE-8276452.jpg" alt="DE-8276452"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8293692.jpg"><img  src="./last/DE-8293692.jpg" alt="DE-8293692"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/DE-8311686.jpg"><img  src="./last/DE-8311686.jpg" alt="DE-8311686"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/EE-257535.jpg"><img  src="./last/EE-257535.jpg" alt="EE-257535"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/FI-3458096.jpg"><img  src="./last/FI-3458096.jpg" alt="FI-3458096"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/FI-3501998.jpg"><img  src="./last/FI-3501998.jpg" alt="FI-3501998"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/FR-1177723.jpg"><img  src="./last/FR-1177723.jpg" alt="FR-1177723"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/GB-1102708.jpg"><img  src="./last/GB-1102708.jpg" alt="GB-1102708"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/GB-1102966.jpg"><img  src="./last/GB-1102966.jpg" alt="GB-1102966"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/IT-509804.jpg"><img  src="./last/IT-509804.jpg" alt="IT-509804"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/JP-1264475.jpg"><img  src="./last/JP-1264475.jpg" alt="JP-1264475"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/LT-654194.jpg"><img  src="./last/LT-654194.jpg" alt="LT-654194"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/LT-664707.jpg"><img  src="./last/LT-664707.jpg" alt="LT-664707"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/MX-50883.jpg"><img  src="./last/MX-50883.jpg" alt="MX-50883"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NL-4344177.jpg"><img  src="./last/NL-4344177.jpg" alt="NL-4344177"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NL-4365832.jpg"><img  src="./last/NL-4365832.jpg" alt="NL-4365832"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NL-4366689.jpg"><img  src="./last/NL-4366689.jpg" alt="NL-4366689"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NL-4383745.jpg"><img  src="./last/NL-4383745.jpg" alt="NL-4383745"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NL-4385295.jpg"><img  src="./last/NL-4385295.jpg" alt="NL-4385295"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NL-4394250.jpg"><img  src="./last/NL-4394250.jpg" alt="NL-4394250"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/NO-179624.jpg"><img  src="./last/NO-179624.jpg" alt="NO-179624"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/PL-1594287.jpg"><img  src="./last/PL-1594287.jpg" alt="PL-1594287"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-6465058.jpg"><img  src="./last/RU-6465058.jpg" alt="RU-6465058"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7301135.jpg"><img  src="./last/RU-7301135.jpg" alt="RU-7301135"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7301185.jpg"><img  src="./last/RU-7301185.jpg" alt="RU-7301185"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7301545.jpg"><img  src="./last/RU-7301545.jpg" alt="RU-7301545"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7316391.jpg"><img  src="./last/RU-7316391.jpg" alt="RU-7316391"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7324185.jpg"><img  src="./last/RU-7324185.jpg" alt="RU-7324185"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7327627.jpg"><img  src="./last/RU-7327627.jpg" alt="RU-7327627"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7329520.jpg"><img  src="./last/RU-7329520.jpg" alt="RU-7329520"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7330419.jpg"><img  src="./last/RU-7330419.jpg" alt="RU-7330419"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7333646.jpg"><img  src="./last/RU-7333646.jpg" alt="RU-7333646"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7350586.jpg"><img  src="./last/RU-7350586.jpg" alt="RU-7350586"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7355456.jpg"><img  src="./last/RU-7355456.jpg" alt="RU-7355456"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/RU-7355681.jpg"><img  src="./last/RU-7355681.jpg" alt="RU-7355681"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/TH-298130.jpg"><img  src="./last/TH-298130.jpg" alt="TH-298130"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/TR-408735.jpg"><img  src="./last/TR-408735.jpg" alt="TR-408735"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/TW-2718853.jpg"><img  src="./last/TW-2718853.jpg" alt="TW-2718853"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/TW-2730247.jpg"><img  src="./last/TW-2730247.jpg" alt="TW-2730247"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/TW-2738883.jpg"><img  src="./last/TW-2738883.jpg" alt="TW-2738883"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/UA-1697141.jpg"><img  src="./last/UA-1697141.jpg" alt="UA-1697141"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/UA-1709117.jpg"><img  src="./last/UA-1709117.jpg" alt="UA-1709117"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5907566.jpg"><img  src="./last/US-5907566.jpg" alt="US-5907566"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5919012.jpg"><img  src="./last/US-5919012.jpg" alt="US-5919012"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5920948.jpg"><img  src="./last/US-5920948.jpg" alt="US-5920948"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5932601.jpg"><img  src="./last/US-5932601.jpg" alt="US-5932601"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5937898.jpg"><img  src="./last/US-5937898.jpg" alt="US-5937898"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5947820.jpg"><img  src="./last/US-5947820.jpg" alt="US-5947820"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5958431.jpg"><img  src="./last/US-5958431.jpg" alt="US-5958431"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-5960473.jpg"><img  src="./last/US-5960473.jpg" alt="US-5960473"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6012701.jpg"><img  src="./last/US-6012701.jpg" alt="US-6012701"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6018439.jpg"><img  src="./last/US-6018439.jpg" alt="US-6018439"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6018516.jpg"><img  src="./last/US-6018516.jpg" alt="US-6018516"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6028726.jpg"><img  src="./last/US-6028726.jpg" alt="US-6028726"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6050864.jpg"><img  src="./last/US-6050864.jpg" alt="US-6050864"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6057595.jpg"><img  src="./last/US-6057595.jpg" alt="US-6057595"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6062359.jpg"><img  src="./last/US-6062359.jpg" alt="US-6062359"></a></div>
-					<div class="item thumb-fl thumb"><a data-fancybox="gallery" href="./last/US-6069966.jpg"><img  src="./last/US-6069966.jpg" alt="US-6069966"></a></div>
-				</div>
-			</div>    
+			<script src='getrecent.js'></script>    
 		</div>
 	</div> 
-
-
-
-
-
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
