--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<!-- owl carousel -->
 	<!-- <link rel="stylesheet" href="./css/owl.carousel.css"> -->
 
+	<script src="./js/csi.min.js"></script>
+
 	<link rel="stylesheet" href="./css/post.css">
 	<!-- <link rel="stylesheet" href="./css/overlay.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,9 +31,11 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Меню -->
-			<script src='getmenu.js'></script>
+			<!-- <script src='getmenu.js'></script> -->
+			<div data-include="./menu.html"></div>
 			<!-- Основной блок -->
-			<script src='getrecent.js'></script>    
+			<!-- <script src='getrecent.js'></script>     -->
+			<div data-include="./recent.html"></div>
 		</div>
 	</div> 
 
