--- a/country/Argentina.html
+++ b/country/Argentina.html
@@ -23,39 +23,37 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div data-include="././menu.html"></div>
-        <div class="col-md-9 col-lg-10 content-container">
-           <h1>Argentina</h1>
-           <div class="row">
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-16623.jpg" data-caption="Postcard AR-16623">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-16623.jpg" alt="Postcard AR-16623">
-                    <div class="bottom-left">AR-16623</div>
-                </a>
+            <div data-include="./../menu.html"></div>
+            <div class="col-md-9 col-lg-10 content-container">
+               <h1>Argentina</h1>
+               <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                    <a data-fancybox="gallery" href="./../collect/argentina/AR-16623.jpg" data-caption="Postcard AR-16623">
+                        <img class="img-fluid w-100" src="./../collect/argentina/AR-16623.jpg" alt="Postcard AR-16623">
+                        <div class="bottom-left">AR-16623</div>
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                    <a data-fancybox="gallery" href="./../collect/argentina/AR-21033.jpg" data-caption="Postcard AR-21033">
+                        <img class="img-fluid w-100" src="./../collect/argentina/AR-21033.jpg" alt="Postcard AR-21033">
+                        <div class="bottom-left">AR-21033</div>
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6 thumb">
+                    <a data-fancybox="gallery" href="./../collect/argentina/AR-25613.jpg" data-caption="Postcard AR-25613">
+                        <img class="img-fluid w-100" src="./../collect/argentina/AR-25613.jpg" alt="Postcard AR-25613">
+                        <div class="bottom-left">AR-25613</div>
+                    </a>
+                </div> 
+               </div>
+            <nav style="padding-left: 10px; padding-top: 10px;">
+              <ul class="pagination">
+                 <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
+              </ul>
+            </nav>
             </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-21033.jpg" data-caption="Postcard AR-21033">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-21033.jpg" alt="Postcard AR-21033">
-                    <div class="bottom-left">AR-21033</div>
-                </a>
-            </div>
-            <div class="col-md-3 col-sm-4 col-xs-6 thumb">
-                <a data-fancybox="gallery" href="./../collect/argentina/AR-25613.jpg" data-caption="Postcard AR-25613">
-                    <img class="img-fluid w-100" src="./../collect/argentina/AR-25613.jpg" alt="Postcard AR-25613">
-                    <div class="bottom-left">AR-25613</div>
-                </a>
-            </div> 
         </div>
-        <nav style="padding-left: 10px; padding-top: 10px;">
-          <ul class="pagination">
-           <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-       </ul>
-   </nav>
-</div>
-</div>
-</div>
-
-
+    </div>
 
 
 <!-- Optional JavaScript -->
