--- a/country/Argentina.html
+++ b/country/Argentina.html
@@ -12,6 +12,8 @@
     <!-- fancyBox JS -->
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
+    <script src="./js/csi.min.js"></script>
+
     <link rel="stylesheet" href="./../css/post.css">
     <link rel="stylesheet" href="./../css/flag.css">
     
@@ -24,6 +26,7 @@
     <div class="container-fluid">
         <div class="row">
             <div data-include="./../menu.html"></div>
+            <!-- Content -->
             <div class="col-md-9 col-lg-10 content-container">
                <h1>Argentina</h1>
                <div class="row">
