--- a/country/Argentina.html
+++ b/country/Argentina.html
@@ -12,7 +12,7 @@
     <!-- fancyBox JS -->
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
-    <script src="./js/csi.min.js"></script>
+    <script src="./../js/csi.min.js"></script>
 
     <link rel="stylesheet" href="./../css/post.css">
     <link rel="stylesheet" href="./../css/flag.css">
