--- a/country/Australia.html
+++ b/country/Australia.html
@@ -24,7 +24,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div data-include="./../menu.html"></div>
+            <div data-include="./menu.html"></div>
             <!-- Content -->
         <div class="col-md-9 col-lg-10 content-container">
            <h1>Australia</h1>
