--- a/country/Australia2.html
+++ b/country/Australia2.html
@@ -27,10 +27,10 @@
         <div class="row">
             <div data-include="./menu.html"></div>
             <!-- Content -->
-        <div id="content">
+        
         <div class="col-md-9 col-lg-10 content-container">
            <h1>Australia</h1>
-           <div class="row">
+           <div class="row content">
             <div class="col-md-3 col-sm-4 col-xs-6 thumb z">
                 <a data-fancybox="gallery" href="./../collect/australia/AU-142393.jpg" data-caption="Postcard AU-142393">
                     <img class="img-fluid w-100" src="./../collect/australia/AU-142393.jpg" alt="Postcard AU-142393">
@@ -238,8 +238,7 @@
         </nav>
         -->
     </div>
-    </div>
-		<div id="pagingControls"></div>
+    		<div id="pagingControls"></div>
 </div>
 </div>
 
