--- a/country/Belarus2.html
+++ b/country/Belarus2.html
@@ -29,6 +29,7 @@
                 <div class="col-md-9 col-lg-10 content-container">
                  <h1>Belarus</h1>
                  <div class="row">
+                    <div id="uniqueId">
                     <div class="col-md-3 col-sm-4 col-xs-6 thumb">
                         <a data-fancybox="gallery" href="./../collect/belarus/BY-184658.jpg" data-caption="Postcard BY-184658">
                             <img class="img-fluid w-100" src="./../collect/belarus/BY-184658.jpg" alt="Postcard BY-184658">
@@ -809,6 +810,8 @@
                             <div class="bottom-left">BY-2786908</div>
                         </a>
                     </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -825,6 +828,15 @@
     <!-- fancyBox JS -->
     <script src="./../fancybox/jquery.fancybox.min.js"></script>
     <script src="./../fancybox/jquery.fancybox.protect.js"></script>
+
+    <script src="./../js/buzina-pagination.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('#uniqueId').buzinaPagination({
+          itemsOnPage:5
+        });
+      });
+    </script>
 
 
 </body>
