--- a/country/Belarus2.html
+++ b/country/Belarus2.html
@@ -29,7 +29,7 @@
                 <div class="col-md-9 col-lg-10 content-container">
                    <h1>Belarus</h1>
                    <div id="uniqueId">
-                     <div class="row">
+                     <!-- <div class="row"> -->
 
                         <div class="col-md-3 col-sm-4 col-xs-6 thumb">
                             <a data-fancybox="gallery" href="./../collect/belarus/BY-184658.jpg" data-caption="Postcard BY-184658">
@@ -811,7 +811,7 @@
                                 <div class="bottom-left">BY-2786908</div>
                             </a>
                         </div>
-                    </div>
+                    <!-- </div> -->
 
                 </div>
             </div>
