--- a/country/Belarus.html
+++ b/country/Belarus.html
@@ -1,25 +1,25 @@
 <!doctype html>
-    <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="https://static1.postcrossing.com/favicon.ico" />
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="https://static1.postcrossing.com/favicon.ico" />
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="./../css/bootstrap.min.css">
-        <!-- fancyBox JS -->
-        <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./../css/bootstrap.min.css">
+    <!-- fancyBox JS -->
+    <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
 
-        <script src="./../js/csi.min.js"></script>
+    <script src="./../js/csi.min.js"></script>
 
-        <link rel="stylesheet" href="./../css/post.css">
-        <link rel="stylesheet" href="./../css/flag.css">
-        <title>Alexei's Postcrads - Belarus</title>
+    <link rel="stylesheet" href="./../css/post.css">
+    <link rel="stylesheet" href="./../css/flag.css">
+    <title>Alexei's Postcrads - Belarus</title>
 
 
-    </head>
+</head>
     <body>
 
         <div class="container-fluid">
@@ -811,7 +811,8 @@
                                 <div class="bottom-left">BY-2786908</div>
                             </a>
                         </div>
-                    <!-- </div> -->
+                    
+            <!-- New add here -->                    
 
                 </div>
             </div>
