--- a/country/Croatia.html
+++ b/country/Croatia.html
@@ -28,7 +28,7 @@
         </div>
         <!-- Content -->
         <div class="col-md-9 col-lg-10 content-container">
-            <h1>Azerbaijan</h1>
+            <h1>Croatia</h1>
             <div id="uniqueId">
 
             <div class="col-md-3 col-sm-4 col-xs-6 thumb">
