--- a/country/Russia2.html
+++ b/country/Russia2.html
@@ -12,8 +12,8 @@
     <!-- fancyBox JS -->
     <link href="./../fancybox/jquery.fancybox.min.css" rel="stylesheet">
         
-    <!-- <script src="./../js/csi.min.js"></script> -->
-    <script src="./../js/jquery.bootpag.min.js"></script>
+    <script src="./../js/csi.min.js"></script>
+    <script src="https://raw.github.com/botmonster/jquery-bootpag/master/lib/jquery.bootpag.min.js"></script>
     
     <link rel="stylesheet" href="./../css/post.css">
     <link rel="stylesheet" href="./../css/flag.css">
