--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     tt: { folder: "trinidad_and_tobago", name: "Тринидад и Тобаго" },
     tr: { folder: "turkey", name: "Турция" },
     ua: { folder: "ukraine", name: "Украина" },
-    gb: { folder: "united_kingdom", name: "Великобритания" },
+    uk: { folder: "united_kingdom", name: "Великобритания" },
     us: { folder: "usa", name: "США" },
     uz: { folder: "uzbekistan", name: "Узбекистан" }
   };
